# pddlsim

./: .gitignore  .gitmodules  CONTRIBUTING.md  HIDDEN-KNOWLEDGE-SYNTAX.md  LICENSE  NOTICE  README.md  ROADMAP.md  TODO.md  avoid_run_profile  avoid_run_profile_lapkt  avoid_run_profile_original  check_cloud_solver.py  execution.details  executive_knowledge.txt  executor.py  fd_parser.py  first_parser.py  grab_ipc2002.py  main.py  notes.txt  obsub.py  plan_dispatch.py  planner.py  planning_client.py  planning_server.py  pyproject.toml  random_executor.py  reinstall.sh  server.py  setup.py  sim_client.py  sim_server.py  simple_client.py  simple_server.py  simulator.py  temp_reduced.pddl  tmp.ipc  tmp_delayed_dispatch
.github/workflows/: docs.yml  release.yml
assets/problems/dungeon/: domain.pddl  instance-1-reveal.pddl  instance-1.pddl
assets/problems/gripper/: domain.pddl  instance-1.pddl  instance.pddl
dist_test/: pip-selfcheck.json
dist_test/local/: bin  include  lib
docs/: Makefile  conf.py  index.rst
docs/contributor_guide/: docs.rst  index.rst  publishing.rst  remote-simulator-protocol.rst  setup.rst
docs/contributor_guide/remote-simulator-protocol/: index.rst  latest.rst
docs/source/: conf.py  index.rst  modules.rst  pddlsim.executors.rst  pddlsim.remote.rst  pddlsim.rst  pddlsim.services.rst
docs/user_guide/: index.rst
domains/: complex_football_domain.pddl  complex_football_problem.pddl
domains/examples/zeno-travel/: prob01_multigoal.pddl
examples/agent/: avoid_previous_state.py  planner.py  planner_multiple_goals.py  random_agent.py
examples/executors/: avoid_return_random.py  plan_dispatch.py  plan_dispatch_multiple_goals.py  random_executor.py
examples/simulation/: client.py  local.py  server.py
executors/: avoid_return_random.py  delayed_dispatch.py  plan_dispatch.py  random_executor.py
experiments/: domain_multi_effect.pddl  execution.details  generate_problem.py  maze_reducer_executor.py  multiple_goal_temp.pddl  multiple_goals.py  reduce_domain.py  tmp.ipc  tmp_delayed_dispatch
experiments/domain_resolution/: simple_problem.pddl  vertical_models_executive.py
experiments/problems/: corridor_500.pddl  corridor_5_failable.pddl  corridor_v2_5.pddl  t_5_5_5.pddl  t_5_5_5_multiple.pddl  t_5_5_5_or.pddl  t_600_5_5.pddl
lapkt/: .fuse_hidden000002fd00000001  build_lib.sh  next_actions.py  planner_wrapper.py  successors.py  tracked_successor.py
lapkt/fd/: grounding.py
lapkt/succ_gen/: .fuse_hidden00004fce00000001  .sconsign.dblite  READ.me  SConstruct  actions.list  attack_domain.pddl  attack_problem2.pddl  next_actions.py  parser.py  prof.c  test_succ_gen.py  valgrind-python.supp
lapkt/succ_gen/src/: module.cxx  planner.cxx  planner.hxx  py_strips_state.hxx
nav_model_resolution/: corridor_1000.pddl  corridor_20.pddl  corridor_40.pddl  corridor_400.pddl  corridor_5.pddl  corridor_50.pddl  generate_problem.py  maze_reducer_executor.py  reduce_domain.py  simple_problem.pddl  t_1000_5_5.pddl  t_100_5_5.pddl  t_10_10_10.pddl  t_200_5_5.pddl  t_300_300_300.pddl  t_400_300_300.pddl  t_400_5_5.pddl  t_5_5_5.pddl
pddl/: tree_visitor.py
pddlsim/: fd_parser.py  local_simulator.py  parser_independent.py  planner.py  requirements.txt  sim_env.py  simulator.py
pddlsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pddlsim/executors/: avoid_return_random.py  delayed_dispatch.py  plan_dispatch.py  plan_dispatch_multiple_goals.py  random_executor.py
pddlsim/remote/: messages.py  remote_simulator.py  simulator_server.py
pddlsim/services/: __init__.py  action_simulator.py  goal_tracking.py  mediator.py  memorizer.py  pddl.py  perception.py  problem_generation.py  problem_generator.py  simulator_mediator.py  simulator_services.py  valid_actions.py
pddlsim/successors/: next_actions.py  planner_wrapper.py  successor.py  tracked_successor.py
pddlsim/utils/: planner.py  valid_actions.py
planners/LTL_ijcai2011/ltpddl2pddl-0.1/: 000-README.txt
planners/LTL_ijcai2011/ltpddl2pddl-0.1/compiler/: basic.h  char_map.h  defs.h  index.h  ltpddl2pddl.cc  makefile  name.cc  parser.h  ppddl.lex  ppddl.yy  problem.cc  ptr_table.h  string_table.cc  tmp-automaton
planners/LTL_ijcai2011/ltpddl2pddl-0.1/example/: p01.ltl.pddl
planners/LTL_ijcai2011/ltpddl2pddl-0.1/ltl2ba-1.1/: lex.c  ltl2ba.h  main.c
profile/: avoid_run  avoid_run_lapkt  delayed_dispatch  plan_dispatch  summary.txt
server/: client_utils.py  remote_simulator.py  remote_simulator_mediator.py
shared/: socket_utils.py
src/pddlsim/: __init__.py  _asp.py  _serde.py  asp.py  ast.py  executor.py  fd_parser.py  grammar.lark  local.py  local_simulator.py  parser.py  parser_independent.py  simulation.py  simulator.py  state.py
src/pddlsim/agents/: previous_state_avoider.py  random_limited_walker.py  random_walker.py
src/pddlsim/cli/: __init__.py  client.py  server.py
src/pddlsim/executors/: __init__.py  plan_dispatch.py  plan_dispatch_multiple_goals.py  random_executor.py
src/pddlsim/parser/: common.py  domain.py  problem.py
src/pddlsim/remote/: __init__.py  _message.py  client.py  server.py  socket_utils.py
src/pddlsim/rsp/: __init__.py  client.py  message.py  serde.py  server.py
src/pddlsim/services/: __init__.py  pddl.py  simulator_services.py  valid_actions.py
src/pddlsim/utils/: planner.py  valid_actions.py
tests/: __init__.py  context.py  tests.py
tests/benches/: valid_actions.py
tests/integration/simulation/: test.py
tests/unit/: tests.py
tests/unit/gga/: test.py
tests/unit/parser/: test.py  validation.py
tests/unit/parser/invalid-domains/: action-definition-with-repeated-parameter.pddl  constant-definition-with-undefined-type.pddl  equality-condition-without-requirement.pddl  or-condition-without-requirement.pddl  predicate-definition-with-repeated-parameter.pddl  predicate-definition-with-undefined-type.pddl  repeated-action-definition.pddl  (+8 more)
tests/unit/validation/: test.py
tmp/: generated.pddl  tmp_delayed_dispatch
tools/: generate_problem.py  profile_on_remote_client.py  profile_on_remote_server.py  reinstall.sh  sim_client.py  sim_server.py
(+1094 files in other folders)
