[project]
name = "pddlsim"
version = "0.2.0"
description = "PDDL-based simulator for the BIU course \"Introduction to Intelligent, Knowledge-Based and Cognitive Systems\""
authors = [
    { name = "Gal A. Kaminka", email = "galk@cs.biu.ac.il" },
    { name = "Micha S. Molko", email = "michamolko@gmail.com" },
    { name = "Ron Shemesh", email = "ron.shemesh98@gmail.com" },
    { name = "Eyal Weiss", email = "eweiss@campus.technion.ac.il" },
    { name = "Mika Barkan", email = "mika.barkan4@gmail.com" },
    { name = "Yoav Grimland", email = "miestrode@proton.me" },
]
dependencies = [
    "unified-planning>=1.1.0",
    "unified-planning[fast-downward]>=1.1.0",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    "cbor2>=5.6.5",
    "schema>=0.7.7",
    "async-property>=0.2.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["PDDL", "agent", "simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/galk-research/pddlsim"
Issues = "https://github.com/galk-research/pddlsim/issues"
Documentation = "https://github.com/galk-research/pddlsim/wiki"

[tool.pytest.ini_options]
testpaths = ["tests/unit/*.py", "tests/integration/*.py", "tests/benches/*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
# See: https://pytest-benchmark.readthedocs.io/en/latest/usage.html#commandline-options
addopts = "-ra --benchmark-skip --benchmark-autosave --benchmark-compare"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pytest-benchmark[histogram]>=5.1.0",
]
