[project]
name = "pddlsim"
version = "0.2.0.dev0"
description = "PDDL-based simulator for the BIU course \"Introduction to Intelligent, Knowledge-Based and Cognitive Systems\""
authors = [
    { name = "Gal A. Kaminka", email = "galk@cs.biu.ac.il" },
    { name = "Yoav Grimland", email = "miestrode@proton.me" },
]
dependencies = [
    "cbor2>=5.6.5",
    "lark>=1.2.2",
    "clingo>=5.8.0",
    "koda-validate>=4.2.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
keywords = ["PDDL", "agent", "simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/galk-research/pddlsim"
Issues = "https://github.com/galk-research/pddlsim/issues"
Documentation = "https://github.com/galk-research/pddlsim/wiki"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-benchmark[histogram]>=5.1.0"]
doc = ["pdoc>=15.0.3"]
lint = ["mypy>=1.15.0", "ruff>=0.11.8"]
examples = ["unified-planning[fast-downward]>=1.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests/unit/*.py", "tests/integration/*.py", "tests/benches/*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
# See: https://pytest-benchmark.readthedocs.io/en/latest/usage.html#commandline-options
addopts = "-ra --benchmark-skip --benchmark-autosave --benchmark-compare"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # PEP8 naming
    "N",
    # Perflint
    "PERF",
    # pydocstyle
    "D",
    # refurb
    "FURB",
    # Ruff-specific rules
    "RUF",
    # isort
    "I",
]

[tool.ruff.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D"]
